--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Ajeet Kushwaha</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <link rel="icon" href="favicon.ico">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
