--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </head>
     <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud">
+        <img class="top-cloud" src="cloud.png" alt="cloud">
         <h1 class= "Ajeet">I'm Ajeet</h1>
         <h2 class="initiator"><p>a <span class="pro">daring</span> initiator</p></h2>
-        <img class="bottom-cloud"  src="images/cloud.png" alt="cloud">
-        <img src="images/mountain.png" alt="mountain">
+        <img class="bottom-cloud"  src="cloud.png" alt="cloud">
+        <img src="mountain.png" alt="mountain">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="myimage" src="images/Ajeet-modified.png" alt="Ajeet">
+          <img class="myimage" src="Ajeet-modified.png" alt="Ajeet">
           <h2>Hello.</h2>
           <p>Myself Ajeet. I'm 2nd year undergrad from IIT Kanpur.</p>
         </div>
@@ -30,12 +30,12 @@
         <div class="skills">
           <h2>My Skills/Hobbies</h2>
           <div class="skill-row">
-            <img class="skill1" src="images/books.png" alt="book reading">
+            <img class="skill1" src="books.png" alt="book reading">
             <h3>Book Reader</h3>
             <p class="book-dis">I love reading books. SO far I've read 72+ books. My aim is to complete atleast 150 books before 2025. I'm positive that I'll do it.</p>
           </div>
           <div class="skill-row">
-            <img class="skill2" src="images/digital-art.png" alt="Digital Art">
+            <img class="skill2" src="digital-art.png" alt="Digital Art">
             <h3>Digital Artist</h3>
             <p class="art-dis">I like editing photos, videos. I know photoshop, illustrator, blender and many more softwares to create nice digital fireworks.</p>
           </div>
